[package]
name = "guess_num"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "guess_num" # 二进制文件名
path = "src/main.rs"  # 二进制文件路径

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.9.0-alpha.1"
lazy_static = "1.4.0"
colored = "2.1.0"
