[package]
name = "upload_logs"
version = "0.1.0"
edition = "2021"
#windows_subsystem = "windows"  # 子服务，无运行窗口 单独打包运行时可设置

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "upload_logs" # 二进制文件名
path = "src/main.rs"  # 二进制文件路径



[dependencies]
reqwest = { version = "0.12.3", features = ["blocking"] }
chrono = "0.4.38"

